fix(DrTypeChip): 💄 gap between type and age group
Dentist has two chips and there should be no gap between them.

--- a/src/components/HomeSections/DrInfo/DrTypeChip/DrTypeChip.module.css
+++ b/src/components/HomeSections/DrInfo/DrTypeChip/DrTypeChip.module.css
@@ -1,3 +1,9 @@
+.DrTypeChipWrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0;
+}
+
 .DrTypeChip {
   --color-dr-type: inherit;
   --color-bg-dr-type: transparent;
